Fixed hero unit bleed and navbar

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-  padding-top: 60px;
+  // padding-top: 60px;
 }
 
 section {
@@ -36,14 +36,14 @@ textarea {
   float: left;
   margin-right: 10px;
   font-size: 1.7em;
-  color: black;
+  color: #fff;
   text-transform: uppercase;
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
   line-height: 1;
   &:hover {
-    color: black;
+    color: #fff;
     text-decoration: none;
   }
 }
@@ -71,6 +71,24 @@ footer {
     li {
       float: left;
       margin-left: 10px;
+    }
+  }
+}
+
+/* Large desktop */
+@media (min-width: 1200px) {}
+ 
+/* Portrait tablet to landscape and desktop */
+@media (min-width: 768px) and (max-width: 979px) {}
+ 
+/* Landscape phone to portrait tablet */
+@media (max-width: 767px) {}
+ 
+/* Landscape phones and down */
+@media (max-width: 480px) {
+  .hero-unit{
+    h1 {
+      font-size: 2em;
     }
   }
 }
